Melhorias no projeto

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Compra Inteligente</title>
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <meta name="description" content="CompraInteligente é Sistema web que auxilia usuários a criar e gerenciar listas de compras de maneira eficiente, automatizando a organização e oferecendo sugestões baseadas em histórico de compras.">
+    <meta name="keywords" content="CompraInteligente, Cria listas de compras, organizar itens por categorias, lista de compras">
     <link rel="stylesheet" href="style.css">    
 </head>
 <body>
