Adição da seção de banner principal

--- a/index.html
+++ b/index.html
@@ -28,12 +28,21 @@
         
         <div class="main">
 
-            <form action="" method="post" autocomplete="on" target="_blank">
+          <span>Lista de Supermercado Otimizada</span>
+          <a href="#">Cadastrar-se</a>
 
-                <input type="text" name="nome" id="nome" required>
-                <input type="submit" value="enviar">
 
-            </form>
+          <div class="img-banner">
+            <img src="" class="img-banner" alt="imagem banner principal" srcset="">
+          </div>
+
+        </div>
+
+        <div class="container">
+
+            <div class="chamada">
+                <h3>Escolha como fazer suas Lista de compras</h3>
+            </div>
 
         </div>
         
