Adição da seção de cards

--- a/index.html
+++ b/index.html
@@ -44,6 +44,21 @@
                 <h3>Escolha como fazer suas Lista de compras</h3>
             </div>
 
+            <ul class="cards">
+                <li>
+                    <p class="cards-header">O Sistema permite criar novas listas de compras.</p>
+                    <a href="">Quero Começar</a>
+                </li>
+                <li>
+                    <p class="cards-header">O Sistema permite edição de listas existentes.</p>
+                    <a href="">Quero Começar</a>
+                </li>
+                <li>
+                    <p class="cards-header">O Sistema permite  que o usuário personalize as categorias</p>
+                    <a href="">Quero Começar</a>
+                </li>
+            </ul>
+
         </div>
         
         <div class="footer"></div>
