Adição da seção de dúvidas frequentes

--- a/index.html
+++ b/index.html
@@ -84,6 +84,10 @@
 
         </div>
 
+        <div class="container-duvidas">
+            <span>Dúvidas Frequentes</span>
+        </div>
+
         <div class="footer"></div>
     </div>
 
