--- a/index.html
+++ b/index.html
@@ -1,130 +1,209 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Compra Inteligente</title>
-    <meta name="description"
-        content="CompraInteligente é Sistema web que auxilia usuários a criar e gerenciar listas de compras de maneira eficiente, automatizando a organização e oferecendo sugestões baseadas em histórico de compras.">
-    <meta name="keywords"
-        content="CompraInteligente, Cria listas de compras, organizar itens por categorias, lista de compras">
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+
+    <!-- Bootstrap CSS v5.2.1 -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+    <!--Icones-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <!--CSS-->
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
-    <div class="container">
+    <header>
         <div class="header">
-            <div class="logo"></div>
-            <div class="menu">
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#beneficios">Benefícios</a></li>
-                    <li><a href="#duvidas-frequentes">Dúvidas Frequentes</a></li>
-                    <li><a href="#cadastrar">Cadastrar-se</a></li>
-                    <li><a href="#login">Fazer Login </a></li>
+            <!-- Topo -->
+            <div class="container">
+                <div class="logo"><a href="index.html">CompraInteligente</a></div>
+                <div class="menu">
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#beneficios">Benefícios</a></li>
+                        <li><a href="#duvidas-frequentes">Dúvidas Frequentes</a></li>
+                        <li><a href="cadastro.html">Cadastrar-se</a></li>
+                        <li><a href="login.html">Fazer Login </a></li>
+                    </ul>
+                </div>
+            </div>
+    </header>
+    <main>
+        <div class="row banner">
+            <div class="col-md-12">
+                <div class="container">
+
+                    <div class="cta1">
+                        <h2><i class="bi bi-bookmark-star-fill"></i> Lista de supermercado Otimizada</h2>
+                        <h2><i class="bi bi-bookmark-star-fill"></i> Sistema Intuitivo</h2>
+                        <h2><i class="bi bi-bookmark-star-fill"></i> Personalize as categorias do seu jeito</h2>
+                        <a href="cadastro.html">Cadastre-se</a>
+                    </div>
+                    <div class="destaque">
+                        <a href="cadastro.html"><img src="img/banner.jpg"
+                                alt="Lista de supermercados Otimizizadas, Cadastre-se"
+                                class="d-md-block d-sm-none d-none" srcset="">
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <div class="row beneficios" id="beneficios">
+            <div class="container">
+                <h3 class="text-center">Escolha como fazer suas lista de compras</h3>
+                <ul class="container">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <li>
+                                <h4>O Sistema permite criar novas listas de compras.</h4>
+                                <a href="cadastro.html">Quero Começar</a>
+                            </li>
+                        </div>
+
+                        <div class="col-md-4">
+                            <li>
+                                <h4>O Sistema permite edição de listas existentes.</h4>
+                                <a href="cadastro.html">Quero Começar</a>
+                            </li>
+                        </div>
+
+                        <div class="col-md-4">
+                            <li>
+                                <h4>O Sistema permite  que o usuário personalize as categorias</h4>
+                                <a href="cadastro.html">Quero Começar</a>
+                            </li>
+                        </div>
                 </ul>
-
-
             </div>
         </div>
 
-        <div class="main">
+        <div class="row">
+            <div class="col-md-12 jeito">
 
-            <span>Lista de Supermercado Otimizada</span>
-            <a href="#">Cadastrar-se</a>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <img src="img/banner-2.png" class="img-fluid"
+                                alt="Banner - Informativo sobre o jeito Inteligente de fazer Supermercado" srcset="">
+                        </div>
+                        <div class="col-md-6">
+                            <div class="lista">
+                                <h4>Seu Jeito Inteligente de fazer Supermercado</h4>
+                                <ul>
+                                    <li><i class="bi bi-cart-check"></i> Autenticação de usuários com login e senha</li>
+                                    <li><i class="bi bi-cart-check"></i> Gerenciamento de Listas de Compras</li>
+                                    <li><i class="bi bi-cart-check"></i> Organização por Categorias</li>
+                                    <li><i class="bi bi-cart-check"></i> Permite que usuário compartilhe listas com
+                                        outras pessoas</li>
+                                    <li><i class="bi bi-cart-check"></i> Permite que o usuário personalize as categorias
+                                    </li>
+                                </ul>
+                            </div>
 
 
-            <div class="img-banner">
-                <img src="" class="img-banner" alt="imagem banner principal" srcset="">
-            </div>
-
-        </div>
-
-        <div class="container">
-
-            <div class="chamada">
-                <h3>Escolha como fazer suas Lista de compras</h3>
-            </div>
-
-            <div class="container-cards">
-
-                <ul class="cards">
-                    <li>
-                        <p class="cards-header">O Sistema permite criar novas listas de compras.</p>
-                        <a href="">Quero Começar</a>
-                    </li>
-                    <li>
-                        <p class="cards-header">O Sistema permite edição de listas existentes.</p>
-                        <a href="">Quero Começar</a>
-                    </li>
-                    <li>
-                        <p class="cards-header">O Sistema permite  que o usuário personalize as categorias</p>
-                        <a href="">Quero Começar</a>
-                    </li>
-                </ul>
-
-            </div>
-
-            <div class="container-destaque">
-
-                <div class="img-destaque">
-                    <img src="" alt="" srcset="">
+                        </div>
+                    </div>
                 </div>
-
-                <h3>Seu Jeito Inteligente de fazer Supermercado</h3>
-                <ul>
-                    <li>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</li>
-                    <li>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</li>
-                    <li>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</li>
-                </ul>
-
             </div>
 
         </div>
 
-        <div class="container-duvidas">
-            <span>Dúvidas <strong>Frequentes</strong></span>
+        <div class="row">
+            <div class="col-md-12 text-center duvidas" id="duvidas-frequentes">
+                <h4>Dúvidas <span>Frequentes</span></h4>
 
-            <div class="accordion accordion-flush" id="accordionFlushExample">
-                <div class="accordion-item">
-                  <h2 class="accordion-header" id="flush-headingOne">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                     Item #1
-                    </button>
-                  </h2>
-                  <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
-                  </div>
+                <div class="container">
+                    <div class="accordion accordion-flush" id="accordionFlushExample">
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="flush-headingOne">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#flush-collapseOne" aria-expanded="false"
+                                    aria-controls="flush-collapseOne">
+                                    Como crio uma nova lista de compras?
+                                </button>
+                            </h2>
+                            <div id="flush-collapseOne" class="accordion-collapse collapse"
+                                aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                                <div class="accordion-body">Você pode criar uma nova lista clicando no botão "Nova
+                                    Lista" na página inicial. Dê um nome à lista e adicione os itens desejados.</div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="flush-headingTwo">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#flush-collapseTwo" aria-expanded="false"
+                                    aria-controls="flush-collapseTwo">
+                                    Posso compartilhar minha lista com outras pessoas?
+                                </button>
+                            </h2>
+                            <div id="flush-collapseTwo" class="accordion-collapse collapse"
+                                aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+                                <div class="accordion-body">Sim! Basta clicar no botão "Compartilhar" dentro da lista e
+                                    selecionar o método de compartilhamento, como link ou convite por e-mail.</div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="flush-headingThree">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#flush-collapseThree" aria-expanded="false"
+                                    aria-controls="flush-collapseThree">
+                                    Como excluo uma lista ou um item?
+                                </button>
+                            </h2>
+                            <div id="flush-collapseThree" class="accordion-collapse collapse"
+                                aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                                <div class="accordion-body">Para excluir um item, clique em "Excluir item". Para excluir
+                                    uma lista inteira, clique no menu de opções e selecione "Excluir Lista".</div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="accordion-item">
-                  <h2 class="accordion-header" id="flush-headingTwo">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                      Item #2
-                    </button>
-                  </h2>
-                  <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
-                  </div>
-                </div>
-                <div class="accordion-item">
-                  <h2 class="accordion-header" id="flush-headingThree">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                      Item #3
-                    </button>
-                  </h2>
-                  <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
-                  </div>
-                </div>
-              </div>
 
+            </div>
         </div>
 
-        <div class="footer"></div>
-    </div>
 
+
+
+
+
+
+    </main>
+
+
+
+    <footer>
+        <!--  footer -->
+        <div class="row rodape text-center">
+             <span>  &copy; CompraInteligente - 2025 - <a href="mailto:agamenon.junior@discente.ufma.br">agamenon.junior@discente.ufma.br</a></span>
+            
+        </div>
+
+
+
+
+
+
+
+
+
+        </div>
+        </div>
+    </footer>
+    <!-- Bootstrap JavaScript Libraries -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
