--- a/compartilhar.html
+++ b/compartilhar.html
@@ -21,11 +21,12 @@
         <div class="header">
             <!-- Topo -->
             <div class="container">
-                <div class="logo"><a href="index.html"><i class="bi bi-ui-checks-grid"></i> CompraInteligente</a></div>
+                <div class="logo"><a href="home.html"><i class="bi bi-ui-checks-grid"></i> CompraInteligente</a></div>
                 <div class="menu-dropdown">
-                    <nav>
-                        <ul>
-                            <li><a href="#">Home</a></li>
+                    <nav class="">
+
+                        <ul class="" id="menusuperior">
+                            <li><a href="home.html">Home</a></li>
                             <li>
                                 <a href="categorias.html">Categorias <i class="bi bi-caret-down"></i></a>
                                 <ul class="drop">
@@ -38,28 +39,29 @@
                             <li>
                                 <a href="produtos.html">Produtos <i class="bi bi-caret-down"></i></a>
                                 <ul class="drop">
-                                    <li><a href="#">Meus Produtos</a></li>
-                                    <li><a href="#">Cadastrar Produto</a></li>
-                                    <li><a href="#">Editar Produto</a></li>
-                                    <li><a href="#">Excluir Produto</a></li>
+                                    <li><a href="produtos.html">Meus Produtos</a></li>
+                                    <li><a href="cadastrar-produto.html">Cadastrar Produto</a></li>
+                                    <li><a href="editar-produto.html">Editar Produto</a></li>
+                                    <li><a href="excluir-produto.html">Excluir Produto</a></li>
                                 </ul>
-                            
+
                             </li>
                             <li>
                                 <a href="listas.html">Listas <i class="bi bi-caret-down"></i></a>
                                 <ul class="drop">
-                                    <li><a href="#">Minhas Listas</a></li>
-                                    <li><a href="#">Cadastrar Lista</a></li>
-                                    <li><a href="#">Editar Lista</a></li>
-                                    <li><a href="#">Excluir Lista</a></li>
+                                    <li><a href="listas.html">Minhas Listas</a></li>
+                                    <li><a href="cadastrar-lista.html">Cadastrar Lista</a></li>
+                                    <li><a href="editar-lista.html">Editar Lista</a></li>
+                                    <li><a href="excluir-lista.html">Excluir Lista</a></li>
                                 </ul>
-                            
+
                             </li>
-                            <li><a href="logout.html">Sair</a></li>
+                            <li><a href="index.html">Sair</a></li>
                         </ul>
                     </nav>
                 </div>
             </div>
+        </div>
     </header>
     <main>
         <div class="row">
